--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "env-cmd -f .env.dev react-scripts start",
-    "build": "react-scripts build",
+    "start":"env-cmd -f ./.env  react-scripts start",
+    "start:local": "env-cmd LOCAL && npm run start",
+    "build":"react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
