--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.9.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "react-to-pdf": "0.0.14",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -30,9 +30,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start":"env-cmd -f ./.env  react-scripts start",
+    "start": "env-cmd -f ./.env  react-scripts start",
     "start:local": "env-cmd LOCAL && npm run start",
-    "build":"react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
