--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.0",
-    "env-cmd": "^10.1.0",
+    "dotenv-webpack": "^7.0.3",
     "formik": "^2.2.6",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
@@ -30,7 +31,7 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "env-cmd -f ./.env  react-scripts start",
+    "start": "HTTPS=true&&PORT=3000 react-scripts start",
     "start:local": "env-cmd LOCAL && npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test",
