--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^5.0.0",
     "dotenv-webpack": "^7.0.3",
     "formik": "^2.2.6",
+    "node-sass": "^6.0.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.9.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
