--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.9.0",
+    "react-modal": "^3.14.3",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
